@@ -1,0 +1,38 @@
+# Set name for launch configuration
+com.openexchange.aws.autoscaling.launchconfiguration = ox-aws-autoscaling-configuration
+
+# Set name for autoscaling group
+com.openexchange.aws.autoscaling.autoscaling = ox-aws-autoscaling-group
+
+# Id of the AMI image
+com.openexchange.aws.autoscaling.ami = ami-a1e7e1d5
+
+# Instance type, see http://aws.amazon.com/ec2/#instance
+com.openexchange.aws.autoscaling.type = t1.micro
+
+# Security group which instances will use
+com.openexchange.aws.autoscaling.securitygroup = sg-0d94a179
+
+# Keypair to use for ssh login
+com.openexchange.aws.autoscaling.keyPair = jbauerdick
+
+# Set the zone where the loadbalancer will be available
+com.openexchange.aws.autoscaling.zone = eu-west-1a
+
+# Set name of the loadbalancer
+com.openexchange.aws.autoscaling.loadbalancer = ox-aws-loadbalancer
+
+# Minimun instances in autoscaling group
+com.openexchange.aws.autoscaling.min = 2
+
+# Maximum instances in autoscaling group
+com.openexchange.aws.autoscaling.max = 10
+
+# Number of seconds that AWS will wait after an autoscaling event occurs before triggering another event
+com.openexchange.aws.autoscaling.grace = 300
+
+# Number of instances to start when scaleup policy is triggered
+com.openexchange.aws.autoscaling.scaleup = 2
+
+# Number of instances to stop when scaledown policy is triggered
+com.openexchange.aws.autoscaling.scaledown = -1
